# vim: set noexpandtab:

2013-02-13 Matt
	* Updated 2lep jet definitions btag value to MV1_80
	
2013-02-13 Steve
	* Added isOppSign method for lep, tau
	* Added support for applying tau systematics
		* Added setState method to Tau class
		* Added support for tes_up and tes_dn in getBaselineObjects
	* Tagging SusyNtuple-00-00-48

2013-02-12 Matt
	* Updated BTagSF code (Copied and modified from SUSYTools) and modified corresponding SusyNtTools function
	* If 2lep flag is set, you will get the unbiased IP
	* Btag eff maps added (root file) along with .env file to load them properly
	* Added MV1_80 (which will be the new operating point). Now the default in get bTagSF.

2013-02-11 Matt
	* Updated central jet eta cut from 2.5 to 2.4
	* Fixed bug in initialization of DilTriggerLogic.  Fixes printouts.
	* Default trigger weight set to Moriond (changed from HCP)

2013-02-10 Steve
	* Added tau eff and electron veto SFs and uncerts
	* Added tau systematic enums: TES_UP, TES_DN
	* Added tau systematic shifts to Tau class: tes_up, tes_dn
	* Tagging SusyNtuple-00-00-47

2013-02-09 Matt
	* Updated DilTrigLogic to accomodate new mu-Met trigger
	* Updated Susy2LepCutflow so it would compile -- TODO: Tidy up 2Lep cutflow so that it can be used.
	* Updated SusyNtTools with latest jet definitions following Anyes Summary email

2013-02-09 Steve
	* Added detEta (detector eta) to jet class, which might be needed later for jvf cut

2013-02-08 Steve
	* Added Mllll method and corresponding isZ for 3lep and 4lep
	* Added option to hasZ to check for mlll and mllll in Z window
		* off by default, of course

2013-02-05 Steve
	* Cleaned up TrilTrigLogic
	* Added printFreq flag to SusyNtAna, so event printing frequency can be controlled
	  independently from the debug level
	* Cleaned up getEventWeightFixed
	* Updated default lumi to A-L in getEventWeight
	* Added effSF to tau class, although we won't be using it yet
	* Tagging SusyNtuple-00-00-46

2013-01-29 Serhan Mete <amete@cern.ch>