@@ -2,6 +2,7 @@
 
 2013-02-13 Matt
 	* Updated 2lep jet definitions btag value to MV1_80
+	* Restored 3lep ability to get p1181 sf for MV1_85 (required addition of BTagCalibp1181)
 	
 2013-02-13 Steve
 	* Added isOppSign method for lep, tau
